# trigger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml  tmp.txt
devtools_visualizer/: README.md  pubspec.yaml
devtools_visualizer/lib/: main.dart
devtools_visualizer/test/: widget_test.dart
devtools_visualizer/web/: index.html  manifest.json
example/: main.dart  main_stw.dart  main_triggerstate.dart  states.dart  states.g.dart  states.py  trigger_generator.py
extension/devtools/: config.yaml
lib/: operations.dart  trigger.dart  trigger_widgets.dart
lib/src/: annotations.dart  latest_src.dart  operation.dart  scheduler_src.dart  selftrigger_widget.dart  selftrigger_widget_src.dart  trigger_effect_src.dart  trigger_effect_src.dart.bak  trigger_field.dart  trigger_field_src.dart  trigger_fields_src.dart  trigger_inspector.dart  trigger_widgets.dart  trigger_widgets_src.dart
python_codegen/: pyproject.toml
python_codegen/trigger_generator/: __init__.py  trigger_generator.py
python_part/: trigger_generator.py
