[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trigger_generator"
version = "0.1.0"
description = "A Flutter/Dart code generator for Trigger, the State Management."
authors = [{name = "BLeAmz"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
